@@ -30,7 +30,6 @@ import java.net.URL;
 import java.net.UnknownHostException;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.ZonedDateTime;
@@ -753,7 +752,7 @@ public class StringConverter implements ObjectConverter<String> {
 	@Override
 	public Path decodePath(String value) throws ConverterException {
 		try {
-			return value != null ? Paths.get(value) : null;
+			return value != null ? Path.of(value) : null;
 		} 
 		catch (InvalidPathException e) {
 			throw new ConverterException(value + " can't be decoded to the requested type", e);
