@@ -15,6 +15,7 @@
  */
 package io.inverno.mod.base.converter;
 
+import io.inverno.mod.base.reflect.Types;
 import java.io.File;
 import java.math.BigDecimal;
 import java.math.BigInteger;
@@ -25,7 +26,6 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.UnknownHostException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.ZonedDateTime;
@@ -35,11 +35,8 @@ import java.util.Currency;
 import java.util.List;
 import java.util.Locale;
 import java.util.regex.Pattern;
-
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
-
-import io.inverno.mod.base.reflect.Types;
 
 /**
  * @author <a href="mailto:jeremy.kuhn@inverno.io">Jeremy Kuhn</a>
@@ -102,7 +99,7 @@ public class StringConverterTest {
 		File file_value = new File(".");
 		Assertions.assertEquals(file_value, converter.decodeFile(converter.encode(file_value)));
 		
-		Path path_value = Paths.get(".");
+		Path path_value = Path.of(".");
 		Assertions.assertEquals(path_value, converter.decodePath(converter.encode(path_value)));
 		
 		URI uri_value = new URI("file:/tmp");
