@@ -15,17 +15,15 @@
  */
 package io.inverno.mod.boot.internal.resource;
 
-import java.io.IOException;
-import java.net.URI;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-
 import io.inverno.core.annotation.Bean;
 import io.inverno.core.annotation.Overridable;
 import io.inverno.core.annotation.Provide;
 import io.inverno.mod.base.resource.MediaTypeService;
 import io.inverno.mod.base.resource.ResourceException;
+import java.io.IOException;
+import java.net.URI;
+import java.nio.file.Files;
+import java.nio.file.Path;
 
 /**
  * <p>
@@ -43,12 +41,12 @@ public class GenericMediaTypeService implements @Provide MediaTypeService {
 
 	@Override
 	public String getForExtension(String extension) {
-		return this.getForPath(Paths.get("." + extension));
+		return this.getForPath(Path.of("." + extension));
 	}
 
 	@Override
 	public String getForFilename(String filename) {
-		return this.getForPath(Paths.get(filename));
+		return this.getForPath(Path.of(filename));
 	}
 
 	@Override
@@ -63,6 +61,6 @@ public class GenericMediaTypeService implements @Provide MediaTypeService {
 
 	@Override
 	public String getForUri(URI uri) {
-		return this.getForPath(Paths.get(uri.getSchemeSpecificPart()));
+		return this.getForPath(Path.of(uri.getSchemeSpecificPart()));
 	}
 }
