@@ -15,16 +15,15 @@
  */
 package io.inverno.mod.configuration.source;
 
+import io.inverno.mod.base.resource.ModuleResource;
 import java.io.IOException;
 import java.net.URI;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import io.inverno.mod.base.resource.ModuleResource;
 
 /**
  * <p>
@@ -96,8 +95,8 @@ public class BootstrapConfigurationSource extends CompositeConfigurationSource {
 		super(Stream.of(new CommandLineConfigurationSource(args),
 				new SystemPropertiesConfigurationSource(),
 				new SystemEnvironmentConfigurationSource(),
-				Optional.of(Paths.get("conf", "configuration.cprops")).filter(Files::exists).or(() -> Optional.ofNullable(System.getProperty(INVERNO_CONFIG_PATH)).map(config_path -> Paths.get(config_path, "configuration.cprops")).filter(Files::exists)).map(CPropsFileConfigurationSource::new).orElse(null),
-				Optional.ofNullable(System.getProperty(JAVA_HOME)).map(app_home -> Paths.get(app_home, "conf", "configuration.cprops")).filter(Files::exists).map(CPropsFileConfigurationSource::new).orElse(null),
+				Optional.of(Path.of("conf", "configuration.cprops")).filter(Files::exists).or(() -> Optional.ofNullable(System.getProperty(INVERNO_CONFIG_PATH)).map(config_path -> Path.of(config_path, "configuration.cprops")).filter(Files::exists)).map(CPropsFileConfigurationSource::new).orElse(null),
+				Optional.ofNullable(System.getProperty(JAVA_HOME)).map(app_home -> Path.of(app_home, "conf", "configuration.cprops")).filter(Files::exists).map(CPropsFileConfigurationSource::new).orElse(null),
 				Optional.of(new ModuleResource(URI.create("module://" + module.getName() + "/configuration.cprops"))).filter(resource -> resource.exists().orElse(false)).map(CPropsFileConfigurationSource::new).orElse(null)
 		).filter(Objects::nonNull).collect(Collectors.toList()));
 	}
